# image_class_detect

./: package-lock.json  package.json
src/: App.css  App.tsx
src-backend/: Cargo.toml
src-backend/src/: lib.rs  main.rs
src-backend/src/model/: classes.rs  constants.rs  mod.rs  model_tasks.rs
src-backend/src/model/model_functions/: functions.rs
src-backend/src/model/model_impl/: implements.rs
src-backend/src/model/model_structs/: structs.rs
src/assets/: images.tsx
