[package]
name = "src-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4" 
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21.0"
candle-core = "0.8.2"
candle-nn = "0.8.2"
image = "0.25.5"
chrono = "0.4.39"
imageproc = "0.25.0"   # For drawing bounding boxes
rusttype = "0.9.3"
ab_glyph = "0.2"
actix-multipart = "0.6"
futures-util = "0.3"
